# Linux-Assignment

./: .gitignore  CMakeLists.txt  Makefile  README  compile.sh  flight_scanner.sh  main  makefile-just-to-compare  program1.out  program2.out  program3.out  program4.out  script.sh
Program 1/: main.cpp
Program1/: AirportFlights.cpp  CMakeLists.txt  Flight.cpp  Flight.h  Program1  main.cpp
Project1/: CMakeLists.txt  main.cpp  my_program
executables/: program1.out  program2.out  program3.out  program4.out
flightsDB/EGGW/: EGGW.arv  EGGW.dpt
flightsDB/EGKK/: EGKK.arv  EGKK.dpt
flightsDB/EGLL/: EGLL.arv  EGLL.dpt
flightsDB/LLBG/: LLBG.arv  LLBG.dpt
lib/: AirportFlights.cpp  AirportFlights.h  Flight.cpp  Functions.cpp  Functions.h
program2/: CMakeLists.txt  Functions.h  main.cpp
program3/: AirportFlights.h  CMakeLists.txt
program4/: CMakeLists.txt  main.cpp
shared-library/: AirportFlights.cpp  AirportFlights.h  CMakeLists.txt  Database.cpp  Database.h  Flight.cpp  Flight.h  main.cpp
shared_library/: AirportFlights.cpp
src/: main.cpp  program1.cpp  program2.cpp  program3.cpp  program4.cpp  programs.cpp  programs.h
